Tests/CompilerTests/negative/incompatible-if-branches.hylo
struct A { public memberwise init }
struct B { public memberwise init }

public fun main() {
  _ = if true { A() } else { B() }
}
