Tests/CompilerTests/negative/incompatible-if-branches.diagnostics.expected
negative/incompatible-if-branches.hylo:5.30-33: error: no coercion from 'B' to 'A'
  _ = if true { A() } else { B() }
                             ~~~
